# swagger-output.json
@@ -108,7 +108,7 @@
         }
       }
     },
-    "/getProfile": {
+    "/profile/view": {
       "get": {
         "tags": [
           "Profile"
@@ -118,6 +118,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -162,36 +165,22 @@
         }
       }
     },
-    "/editProfile": {
+    "/profile/edit": {
       "patch": {
         "tags": [
           "Profile"
         ],
         "summary": "Edit profile",
         "description": "This endpoint is used for edit the user data.",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
